Change to older method to initialize list